--- a/example/basic/platformio.ini
+++ b/example/basic/platformio.ini
@@ -12,6 +12,12 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+
+build_flags =
+    -std=gnu++17
+build_unflags =
+    -std=gnu++11
+
 lib_deps =
     https://github.com/mestrode/Lin-Interface-Library.git
     https://github.com/mestrode/Lin-Transceiver-Library.git
